--- a/component/Contact/contact.module.css
+++ b/component/Contact/contact.module.css
@@ -90,6 +90,20 @@
 
 }
 @media screen and (max-width: 575px) {
+    /* .contact .contact_right  */
+    .contact .contact_right {
+        position: absolute;
+        top: 0;
+        z-index: -9;
+        margin-top: 150px;
+     }
+    .contact .contact_left h2{
+        font-family: var(--family1);
+        font-size: 4.67vw;
+        font-weight: 400;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 
     .contact .contact_left .from{
         padding-right: 0px;
